Fix LeaveService Java 8 compatibility & set JAVA_HOME in Jenkinsfile